dsg-admin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    field.cattle.io/targetWorkloadIds: '["deployment:dsg-app:dsg-admin"]'
  name: dsg-admin-svc
  namespace: dsg-app
spec:
  clusterIP: None
  clusterIPs:
  - None
  ports:
  - name: arpa
    port: 42
    protocol: TCP
    targetPort: 42
  selector:
    workload.user.cattle.io/workloadselector: deployment-dsg-app-dsg-admin
  type: ClusterIP
