dsg-admin-wl-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    field.cattle.io/targetWorkloadIds: '["deployment:dsg-app:dsg-admin"]'
  name: dsg-admin-wl-svc
  namespace: dsg-app
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    workload.user.cattle.io/workloadselector: deployment-dsg-app-dsg-admin
  type: ClusterIP
