dsg-admin-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    workload.user.cattle.io/workloadselector: deployment-dsg-app-dsg-admin
  name: dsg-admin
  namespace: dsg-app
spec:
  replicas: 1
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: deployment-dsg-app-dsg-admin
  template:
    metadata:
      labels:
        workload.user.cattle.io/workloadselector: deployment-dsg-app-dsg-admin
    spec:
      containers:
      - env:
        - name: JWT_SECRET
          value: ABCD1234
        - name: MONGO_URL
          value: mongodb+srv://stage-dsguser:pz8fR7swzFNd3dka@stage-dsg-42wuh.mongodb.net/DSG?retryWrites=true&w=majority
        image: 589962364545.dkr.ecr.ap-southeast-1.amazonaws.com/dsg-admin:1.0.509
        imagePullPolicy: Always
        name: dsg-admin
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: aws-ecr-secrets
      restartPolicy: Always
      schedulerName: default-scheduler
      
---

apiVersion: v1
kind: Service
metadata:
  annotations:
    field.cattle.io/targetWorkloadIds: '["deployment:dsg-app:dsg-admin"]'
  name: dsg-admin-wl-svc
  namespace: dsg-app
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    workload.user.cattle.io/workloadselector: deployment-dsg-app-dsg-admin
  type: ClusterIP
  
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: app
    cert-manager.io/cluster-issuer: aws-issuer
  name: dsg-admin-ingress
  namespace: dsg-app
spec:
  rules:
  - host: dev-admin.dollarsmartglobal.com
    http:
      paths:
      - backend:
          serviceName: dsg-admin-wl-svc
          servicePort: 8080
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - dev-admin.dollarsmartglobal.com
    secretName: dsg-admin-tls
