dsg-admin-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: app
    cert-manager.io/cluster-issuer: aws-issuer
  name: dsg-admin-ingress
  namespace: dsg-app
spec:
  rules:
  - host: dev-admin.dollarsmartglobal.com
    http:
      paths:
      - backend:
          serviceName: dsg-admin-wl-svc
          servicePort: 8080
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - dev-admin.dollarsmartglobal.com
    secretName: dsg-admin-tls
