dsg-corp-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    workload.user.cattle.io/workloadselector: deployment-dsg-app-dsg-corp
  name: dsg-corp
  namespace: dsg-app
spec:
  replicas: 1
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: deployment-dsg-app-dsg-corp
  template:
    metadata:
      labels:
        workload.user.cattle.io/workloadselector: deployment-dsg-app-dsg-corp
    spec:
      containers:
      - env:
        - name: JWT_SECRET
          value: ABCD1234
        - name: MONGO_URL
          value: mongodb+srv://stage-dsguser:pz8fR7swzFNd3dka@stage-dsg-42wuh.mongodb.net/DSG?retryWrites=true&w=majority
        image: 589962364545.dkr.ecr.ap-southeast-1.amazonaws.com/dsg-corp:1.0.287
        name: dsg-corp
      imagePullSecrets:
      - name: aws-ecr-secrets
      
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    field.cattle.io/targetWorkloadIds: '["deployment:dsg-app:dsg-corp"]'
  name: dsg-corp-wl-svc
  namespace: dsg-app
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    workload.user.cattle.io/workloadselector: deployment-dsg-app-dsg-corp
  type: ClusterIP

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: app
    cert-manager.io/cluster-issuer: aws-issuer
  name: dsg-corp-ingress
  namespace: dsg-app
spec:
  rules:
  - host: dev-corp.dollarsmartglobal.com
    http:
      paths:
      - backend:
          serviceName: dsg-corp-wl-svc
          servicePort: 8080
        pathType: ImplementationSpecific
  tls:
    - hosts: dev-corp.dollarsmartglobal.com
      secretName: aws-r53-key
